<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/picture_placeholder" />

        <TextView
            android:id="@+id/itemNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/item_name_hu"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/itemTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/item_type_placeholder"
            android:layout_margin="10dp"/>


        <RatingBar
            android:id="@+id/itemRatingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:max="5"
            android:numStars="5" />

        <TextView
            android:id="@+id/itemDescTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/item_desc_hu"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/itemPriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/item_price_placeholder"
            android:layout_margin="10dp"/>


        <LinearLayout
            android:id="@+id/itemButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/toCartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:text="@string/to_cart_hu"
                android:textAlignment="center" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_hu"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:ems="10"
                />
            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:ems="10"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>